# The-Civic-Side

./: .gitignore  README.md  citywide-stats.json  clean_zipcodetoward.py  cleanup.py  crawler.py  dash.py  dashboard.py  merged.csv  pyproject.toml  sandbox.ipynb  stats-by-zip.json  stats.py  utils.py  zillowcleaning.py
Cleaning/: 311 Dataset Cleaning.py  311_complaint_count.csv  Merging_clean_datasets.py  Voterturnout_cleaning.py  _311_Dataset_Cleaning.py  clean_zipcode_precinct.csv  cleanzipcodes_toprecincts.py  test_database_unused.py  voterturnout.csv  zillow_cleaned_complete.csv  zillowcleaning.py
campaigns/: __main__.py  app.py  cleanup.py  crawler.py  stats.py  utils.py
campaigns/contributions/: city_stats.json  daley.json  vallas_clean.json  wilson.json
civic-side/: Merging_clean_datasets.py  dashboard.py  sandbox.ipynb
civic-side/campaigns/: README.md
civic-side/the-polis/: Merging_clean_datasets.py  cleanzipcodes_toprecincts.py
civic-side/the_polis/: 311_topcomplaints_byzip.csv  zillowcleaning.py
civic_side/: Merging_clean_datasets.py  dashboard.py  data_prep_funcs.py  graphs.py  merged.csv  prep_data.py  sandbox.ipynb
civic_side/campaigns/: cleanup.py  crawler.py  dash.ipynb  stats.py  utils.py
civic_side/the_polis/: 311_complaint_count.csv  _311_Dataset_Cleaning.py  _311_complaint_count.csv  clean_zipcode_precinct.csv  cleanzipcodes_toprecincts.py  test_database_unused_explore.py  zillowcleaning.py  (+2 more)
datasets/: Chicago Precinct and Ward Names by Zip Code.csv  Voter_Counts.py  cleanzipcodes_geopandas  cleanzipcodes_geopandas.py  voterturnout.csv  voting rates.csv
saved-pages/: joyce.html
(+33 files in other folders)
