[tool.poetry]
name = "30122-project-the-civic-side"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "30122_project_the_civic_side"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
lxml = "^4.9.2"
pandas = "^1.5.3"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
