[tool.poetry]
name = "The-Civic-Side"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "The-Civic-Side"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
lxml = "^4.9.2"
pandas = "^1.5.3"
pathlib = "^1.0.1"
dash = "^2.8.1"
plotly-express = "^0.4.1"
dash-bootstrap-components = "^1.4.0"
geopandas = "^0.12.2"
plotly = "^5.13.1"
cssselect = "^1.2.0"
datetime = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
